# uav_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Command.msg  CompressedImgWithMeta.msg  InteropImage.msg  JudgeMission.msg  Mission.msg  MovingObstacle.msg  MovingObstacleCollection.msg  NED_list.msg  NED_pt.msg  Obstacle_list.msg  OrderedPoint.msg  Point.msg  StationaryObstacle.msg
srv/: GeneratePath.srv  GetMission.srv  GetMissionWithId.srv  PayloadDrop.srv  PlanLandingPoints.srv  PlanMissionPoints.srv  SubmitImage.srv  UpdateSearchParams.srv  UploadPath.srv
