<package format="2">
  <name>uav_msgs</name>
  <version>0.0.1</version>
  <description>Messages common to the UAV, autopilot, imaging and interop subsystems</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="ephraimkunz@todo.todo">ephraimkunz</maintainer>
  <maintainer email="len0rd@github.com">len0rd</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>

</package>
